# qusim

./: .gitignore  Cargo.toml  DSE_VIEW_IMPLEMENTATION_PLAN.md  HANDOFF.md  README.md  build.rs  output.txt  pyproject.toml  test_python_binding.py
.github/workflows/: ci.yml
benches/: hqa_benchmark.rs  noise_benchmark.rs
csrc/telesabre/: config.c  config.h  device.c  device.h  graph.c  graph.h  heap.c  heap.h  json.c  layout.c  layout.h  op.h  report.c  report.h  telesabre.c  telesabre.h  utils.c  utils.h
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DSE_VIEWS.md  QUADRATURE_REPORT.md  ROADMAP.md  handoff_qualitative_variables.md  index.html  quadris.html  qusim.html  search.js
docs/archive/: 2026-04-21-handoff_qualitative_variables.md  2026-04-dse_view_implementation_plan.md  2026-04-handoff_progress_bar.md  README.md
docs/plans/: 2026-03-24-depolarizing-model-fix-design.md  2026-03-24-depolarizing-model-fix.md  2026-03-24-per-qubit-t1t2-and-paper-benchmark-design.md  2026-03-24-per-qubit-t1t2-and-paper-benchmark.md  2026-04-07-ibm-calibration-snapshot.md  2026-04-14-telesabre-fidelity-integration-design.md  2026-04-14-telesabre-fidelity-integration.md  2026-04-21-categorical-facet-design.md  2026-04-21-categorical-facet-plan.md  2026-04-23-frozen-axis-dropdown-design.md  2026-04-23-frozen-axis-dropdown.md  2026-04-23-save-load-sessions-design.md  2026-04-23-save-load-sessions.md  2026-05-05-dse-logical-first-parameterization-design.md  2026-05-05-quadrature-report-design.md
docs/quadris/: analysis.html  dse.html  hqa.html  orchestrator.html  rust_core.html
docs/qusim/: rust_core.html
dse_pau/: DSE_test.ipynb  HQA.py  bench_python_hqa.py  full_test.ipynb  full_test.py  gen_cli_input.py  generate_scalability_vectors.py  generate_test_vectors.py  scalability_bench.py  scalability_vectors.json  test_benchmarks.py  test_vectors.json  utils.py
examples/: README.md  benchmark_against_paper.py  benchmark_live_hw.py  benchmark_real_hw.py  benchmark_telesabre_vs_hqa.py  benchmark_validation.py  dse_1d_noise_sweep.py  dse_2d_pareto.py  dse_fom_heatmap.py  dse_qft_cores.py  plot_fidelities_utils.py  plot_ghz_fidelities.py  plot_qft_comparison.py  plot_qft_fidelities.py  plot_qft_topology_comparison.py  qaoa_maxcut.py  qaoa_maxcut_ring8.qasm
gui/: README.md  __init__.py  app.py  components.py  constants.py  derivatives.py  dse_engine.py  examples.py  fom.py  interpolation.py  layout.py  plotting.py  requirements.txt  server_state.py  session.py  utils.py
gui/assets/: help_icon_modebar.js  interpolation.js  progress.js  resize.js  style.css  tooltip_transforms.js
gui/callbacks/: __init__.py  config_panel.py  custom_qasm.py  export.py  sidebar.py  views.py
python/quadris/: __init__.py  orchestrator.py
python/quadris/analysis/: README.md  __init__.py  fom.py  pareto.py
python/quadris/dse/: README.md  __init__.py  axes.py  circuits.py  engine.py  flatten.py  memory.py  sweep.py  topology.py
python/quadris/hqa/: placement.py
python/qusim/: __init__.py  orchestrator.py
python/qusim/analysis/: README.md  __init__.py  fom.py  pareto.py
python/qusim/dse/: README.md  (+10 more)
scripts/: generate_example_sessions.py  health_check.sh  pull_and_restart.sh  serve_public.sh
src/: circuit.rs  hqa.rs  interactionTensor.rs  lib.rs  noise.rs  python_api.rs  qubit.rs  routing.rs
src/hqa/: README.md  interaction_tensor.rs  mapping.rs  mod.rs
src/noise/: README.md  mod.rs
src/telesabre/: ffi.rs  mod.rs  reconstruct.rs
tests/: bench_parallel_sweep.py  bench_quadrature_report.py  bench_telesabre_vs_hqa.py  test_cores_qubits_oom.py  test_faceting.py  test_frozen_slider.py  test_gate_types.py  test_hot_reload_bugs.py  test_interpolation.py  test_nd_sweep.py  test_parallel_scheduler.py  test_parallel_sweep.py  test_per_qubit_errors.py  test_plotting_merit.py  test_plotting_views.py  test_session.py  test_sweep_progress.py
(+10 files in other folders)
