[package]
name = "qusim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
ndarray = "0.17.2"
pathfinding = "4.9.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
[[bench]]
name = "hqa_benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
