[package]
name = "qusim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qusim"
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.14.0"
ndarray = "0.15.6"
pathfinding = "4.9.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rand = "0.8"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
numpy = "0.21.0"
[[bench]]
name = "hqa_benchmark"
harness = false

[[bench]]
name = "noise_benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
