[project]
name = "qusim"
version = "0.1.0"
description = ""
authors = [
    {name = "Alejandro Gonzalvo",email = "alejandrogonhid@gmail.com"}
]
requires-python = ">=3.12,<3.14.1"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "qiskit (>=2.3.0,<3.0.0)",
    "sparse (>=0.18.0,<0.19.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-benchmark (>=5.2.3,<6.0.0)",
    "pdoc (>=16.0.0,<17.0.0)"
]

[tool.maturin]
module-name = "qusim.rust_core"
python-source = "python"

[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"
