[project]
name = "quadris"
version = "1.0.0"
description = "Multi-core quantum architecture simulator with built-in Design Space Exploration"
authors = [
    {name = "Alejandro Gonzalvo",email = "alejandrogonhid@gmail.com"}
]
requires-python = ">=3.12,<3.14.1"
# Core: Rust simulator + Python DSE library (quadris, quadris.dse, quadris.analysis).
# Plotting via matplotlib so library users can render results without a UI.
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "qiskit (>=2.3.0,<3.0.0)",
    "sparse (>=0.18.0,<0.19.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "qiskit-ibm-runtime (>=0.46.1,<0.47.0)"
]

[project.optional-dependencies]
# Dash GUI (DSE app at gui/app.py). Install with `pip install quadris[gui]`.
gui = [
    "dash (>=4.1.0,<5.0.0)",
    "dash-bootstrap-components (>=2.0.4,<3.0.0)",
    "dash-cytoscape (>=1.0.0,<2.0.0)"
]
# Test + docs tooling.
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-benchmark (>=5.2.3,<6.0.0)",
    "pdoc (>=16.0.0,<17.0.0)"
]

[project.scripts]
quadris-dse = "gui.app:main"

[tool.maturin]
module-name = "quadris.rust_core"
python-source = "python"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"
